--- a/trunk/doc/CHANGELOG
+++ b/trunk/doc/CHANGELOG
@@ -1,6 +1,7 @@
 1.0.3
 -----------------
 Fixed a notice in SQLIImportFactory::cleanup()
+Fixed issue with section assignement on new sqli content object - http://bit.ly/aD8O61
 
 1.0.2
 -----------------
